--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="./style.css" type="text/css" />
+        <meta charset="UTF-8">
+	    <meta name="description" content="Site de jeux et d'activités pour jeune enfants">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+        <link rel="stylesheet" href=".assets/styles/css/style.css" type="text/css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
         <title> {% block title %}| Le nom de mon site{% endblock %}</title>
     </head>
     <body>
+        {% block header%}
+        <img src="./assets/img/Miaou/chatFiligranne.png"></img>
+        <h1>Apprendre avec Miaou</h1>
+        {% endblock %}
         {% block content %}
         {% endblock %}
     </body>
