AuthController fonctions check-register et validateMail en cours

--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -98,15 +98,15 @@ Ma page
                 <!--<legend>Veuillez sélectionner vos intérêts</legend>-->
                 <div class="news">
                     <label for="newsletter">Newsletter</label>
-                <input type="checkbox" id="newsletter" name="newletter" value="newsletter" checked />
+                <input type="checkbox" id="newsletter" name="newletter" value="1" checked />
                 </div>
             </fieldset>
-            <fieldset hidden>
+            <!--<fieldset hidden>
                 <label for="tokenCSRF">
                     Token
                 </label>
                 <input type="token" id="token" name="token" >
-            </fieldset>
+            </fieldset>-->
                 <div class="button">
                     <button class="submit" type="submit">Valider</button>
                 </div>
