--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -4,7 +4,9 @@
 Ma page
 {{ parent() }}
 {% endblock %}
-
+{% block nav %}
+{{ parent() }}
+{% endblock %}
 {% block content %}
 <main>
     <section class="titre">
@@ -101,12 +103,12 @@ Ma page
                 <input type="checkbox" id="newsletter" name="newletter" value="1" checked />
                 </div>
             </fieldset>
-            <!--<fieldset hidden>
+            <fieldset hidden>
                 <label for="tokenCSRF">
                     Token
                 </label>
                 <input type="token" id="token" name="token" >
-            </fieldset>-->
+            </fieldset>
                 <div class="button">
                     <button class="submit" type="submit">Valider</button>
                 </div>
